# panoctagon

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile-api  Dockerfile-backend  Dockerfile-frontend  Justfile  dbt_project.yml  docker-compose.yaml  package-lock.yml  profiles.yml  pyproject.toml  readme.md
data/: panoctagon_orm.duckdb
data/dagster/: dagster.yaml
models/: schema.yml  sources.yml
models/marts/: mart_striking_stats.sql
models/staging/: stg_fight_stats.sql  stg_ufc__fight_stats.sql
models/transformations/: int_fight_stats_by_striking_target.sql
panoctagon/: admin.py  app.py  common.py  dashboard.py  divisions.py  enums.py  models.py  promotions.py  tables.py  viz_trends.py
panoctagon/api/: cli.py  models.py  queries.py  server.py
panoctagon/assets/css/: style.css
panoctagon/dagster/: __init__.py  assets.py  definitions.py  project.py  schedules.py
panoctagon/dagster/defs/: assets.py  definitions.py  jobs.py  schedules.py
panoctagon/dashboard/: common.py  main.py
panoctagon/dashboard/pages/: fighter.py  network.py  roster.py  upcoming.py
panoctagon/ufc/: app.py  parse_fighter_bio.py  parse_fighters.py  parse_fights.py  scrape_events.py  scrape_fighter_bio.py  scrape_fighters.py  scrape_fights.py
panoctagon/ufc/parse/: app.py  bets.py  bios.py  fighters.py  fights.py
panoctagon/ufc/scrape/: app.py  bets.py  bios.py  events.py  fighters.py  fights.py
panoctagon/utils/: setup_db.py
scripts/: verify_data_fresh.py
tests/: test_parse_fighter_odds.py  test_parsing.py
