[tool.poetry]
name = "panoctagon"
version = "0.1.0"
description = ""
authors = ["Jeff Brennan <jeffbrennan10@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
polars = "^0.20.31"
requests = "^2.32.3"
lxml = "^5.2.2"
bs4 = "^0.0.2"
adbc-driver-manager = "^1.0.0"
adbc-driver-sqlite = "^1.0.0"
pyarrow = "^16.1.0"
pyright = "^1.1.366"
ruff-lsp = "^0.0.53"
pytest = "^8.2.2"
pydantic = "^2.7.4"
sqlmodel = "^0.0.19"
dash = "^2.17.1"
dash-mantine-components = "0.12.1"
plotly = "^5.23.0"
pandas = "^2.2.2"
shandy-sqlfmt = { extras = ["jinjafmt"], version = "^0.23.2" }
statsmodels = "^0.14.2"
dbt-core = ">=1.5.0, <1.6.0"
dagster = "^1.7.0"
dagster-webserver = "^1.7.0"
dbt-sqlite = "^1.5.0"
dagster-dbt="^0.23.0"
typer = "^0.12.5"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.dagster]
module_name = "panoctagon.dagster.definitions"
code_location_name = "panoctagon/dagster"
