[project]
name = "panoctagon"
version = "0.1.0"
description = ""
requires-python = "==3.13.11"
readme = "README.md"
dependencies = [
    "polars==1.37.1",
    "requests==2.32.5",
    "lxml==6.0.2",
    "bs4==0.0.2",
    "adbc-driver-manager==1.10.0",
    "adbc-driver-sqlite==1.10.0",
    "pyarrow==23.0.0",
    "pyright==1.1.408",
    "ruff-lsp==0.0.62",
    "pytest==9.0.2",
    "pydantic==2.12.5",
    "sqlmodel==0.0.31",
    "dash==3.4.0",
    "dash-mantine-components==2.4.1",
    "plotly==6.5.2",
    "pandas==3.0.0",
    "shandy-sqlfmt[jinjafmt]==0.29.0",
    "statsmodels==0.14.6",
    "dbt-core==1.11.2",
    "dagster==1.12.12",
    "dagster-webserver==1.12.12",
    "dbt-sqlite==1.10.0",
    "dagster-dbt==0.28.12",
    "typer==0.21.1",
    "gunicorn==24.1.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.dagster]
module_name = "panoctagon.dagster.definitions"
code_location_name = "panoctagon/dagster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
