[project]
name = "panoctagon"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
readme = "readme.md"
dependencies = [
    "polars==1.37.1",
    "requests==2.32.5",
    "lxml==6.0.2",
    "bs4==0.0.2",
    "adbc-driver-manager==1.10.0",
    "pyarrow==23.0.0",
    "pyright==1.1.408",
    "ruff-lsp==0.0.62",
    "pytest==9.0.2",
    "pydantic==2.12.5",
    "sqlmodel==0.0.31",
    "dash==3.4.0",
    "dash-mantine-components==2.4.1",
    "plotly==6.5.2",
    "pandas==3.0.0",
    "shandy-sqlfmt[jinjafmt]==0.29.0",
    "statsmodels==0.14.6",
    "dbt-core==1.11.2",
    "dagster==1.12.12",
    "dagster-webserver==1.12.12",
    "dagster-dbt==0.28.12",
    "typer<=0.17",
    "gunicorn==24.1.1",
    "duckdb==1.1.0",
    "duckdb-engine==0.13.2",
    "dbt-duckdb==1.9.0",
    "dagster-dg-cli>=1.12.12",
    "networkx==3.4.2",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "httpx==0.28.1",
    "questionary==2.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
ignore = [ "dbt_packages" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "panoctagon.dagster"

[tool.ruff]
line-length = 100
